<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="17dp"
    tools:context=".ReportsFragment">

    <FrameLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_hd_txt"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/list_info_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/list_info_txt"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="72dp"
                android:text="@string/btn_go_on" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/report_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rep_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rep_hd_txt"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/rep_info_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/rep_info_txt"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_rep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="72dp"
                android:text="@string/btn_go_on" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>