<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="12dp"
    android:paddingEnd="20dp"
    android:paddingBottom="12dp"
    tools:context=".TestingFragment">

    <TextView
        android:id="@+id/testing_form_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/testing_form"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testing_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ts_name_in" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/testing_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/spinner_bg"
        android:layout_weight="1" />

    <Spinner
        android:id="@+id/testing_lesson"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/spinner_bg"
        android:layout_weight="1" />

    <ListView
        android:id="@+id/view_testing_students"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="0.47"
        android:background="@drawable/list_bg"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetRight="5dp"
            android:text="@string/bth_add" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/Grey"
            android:insetLeft="5dp"
            android:text="@string/bth_cancel" />
    </LinearLayout>

</LinearLayout>