<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="12dp"
    android:paddingEnd="20dp"
    android:paddingBottom="12dp"
    tools:context=".StudentTestingFragment">

    <TextView
        android:id="@+id/student_testing_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.93"
        android:text="@string/student_to_testing_connection_txt"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/testing_choice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/spinner_bg"
        android:layout_weight="1" />

    <Spinner
        android:id="@+id/student_choice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/spinner_bg"
        android:layout_weight="1" />

    <Spinner
        android:id="@+id/mark_choice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/spinner_bg"
        android:layout_weight="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetRight="5dp"
            android:text="@string/bth_add" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/Grey"
            android:insetLeft="5dp"
            android:text="@string/bth_cancel" />
    </LinearLayout>

</LinearLayout>