<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".StatementsFragment">

    <TextView
        android:id="@+id/statement_greeting_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="3"
        android:text="@string/statement_menu_i"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/view_statements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="@drawable/list_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.05"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_connect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/RoyalBlue"
            android:insetRight="5dp"
            android:text="@string/bth_connect"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/Grey"
            android:insetLeft="5dp"
            android:text="@string/bth_disconnect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/DodgerBlue"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_add_24"
            android:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/DodgerBlue"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_edit_24"
            android:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/DodgerBlue"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_update_24"
            android:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/DodgerBlue"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="#FFFFFF" />

    </LinearLayout>

</LinearLayout>